<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="app_name">Remind Me</string>
<string name="action_settings">Settings</string>
<string name="title">Note Title</string>
<string name="note">Note Contents</string>
<string name="snote">Note</string>
<string name="set_reminder">Set</string>
<string name="pick_time">Set Time</string>
<string name="pick_date">Set Date</string>
<string name="rfrom">From</string>
<string name="rto">To</string>
<string name="location">Location</string>
<string name="description">Description</string>
<string name="cancel">Cancel</string>
<string name="edit">Edit</string>
<string name="delete">Delete</string>
<string name="new_large">large_note</string>
<string name="new_short">short_note</string>
<string name="edit_reminder">EditReminder</string>
<string name="SnapShot">SnapShot</string>
<string name="stop_alarm">Stop</string>

<item type="string" name="databaseVersion" format="integer">1</item>
</resources>
